# mpa

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.postgres  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
docs/: kafka-docker-setup.md
scripts/: run_itch.sh  start_db_consumer.sh  start_itch.sh
src/agents/: agent_tools.py  feature_registry.py  test_agent.py
src/analytics/: CandleBucket.py  TradeBucket.py  VwapBucket.py  VwapCalculator.py  VwapTracker.py
src/api/: db.py  main.py
src/book/: market_event.py  market_event_listener.py  noii.py  noii_listener.py  order.py  order_book.py  price_level.py  tob_listener.py  top_of_book.py  trade.py  trade_listener.py
src/consumers/: db_consumer.py  db_insert_listener.py  deserializers.py
src/db/: connection.py  data_quality_checks.sql  inserter.py  schema.sql
src/itch/: chart_runner.py  itch_feed_handler.py  itch_listener.py  itch_parser.py  itch_runner.py  tob_publisher.py  trade_printer.py  vwap_printer.py
src/mcp_server/: __main__.py  server.py
src/publishers/: candle_publisher.py  kafka_publisher.py  market_event_publisher.py  noii_publisher.py  tob_publisher.py  trade_bucket_publisher.py  (+2 more)
tests/: conftest.py  test_candle_bucket.py  test_candle_publisher.py  test_chart_runner.py  test_chart_server.py  test_deserializers.py  test_inserter.py  test_noii.py  test_timer_service.py  test_trade_bucket.py  test_trade_bucket_publisher.py  test_trade_chart_listener.py  test_trade_listener.py  test_trade_publisher.py  test_vwap_bucket.py  test_vwap_publisher.py
(+16 files in other folders)
