[project]
name = "mpa"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Neeraj Bajaj", email = "neeraj.bajaj@gmail.com"},
]
dependencies = ["sortedcontainers>=2.4.0", "confluent-kafka>=2.3.0", "websockets>=13.0", "rich>=14.3.2", "MagicMock>=0.3", "mypy>=1.19.1", "psycopg[binary]>=3.1.0", "mcp[cli]", "fastapi>=0.135.3", "uvicorn[standard]>=0.42.0", "python-dotenv>=1.2.2", "anthropic>=0.40.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = ["book", "itch", "analytics", "publishers", "viewer", "web", "db", "consumers", "mcp_server", "agents"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
